--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,13 +4,18 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: ['12', '10']
+        install-option: ['', '--minimum']
+    name: Node ${{ matrix.node }} sample
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '10'
+          node-version:  ${{ matrix.node-version }}
       - name: build
         run: |
-          npm install
+          npm install ${{ matrix.install-option }}
           npm run build
