--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "karma-sabarivka-reporter",
-  "version": "2.0.1",
+  "version": "3.0.0-0",
   "description": "A Karma plugin. Adds untested files to istanbul coverage statistic",
   "main": "dist/index.js",
   "repository": {
