Update typescript and configurations

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-node_modules
+yarn.lock
 dist
+node_modules/
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+*.log
