--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,28 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
-        "noImplicitAny": false,
-        "outDir": "./dist",
-        "inlineSourceMap": false,
-        "allowJs": true
-    },
-    "include": [
-        "src/**/*"
-    ],
+	"include": [
+		"src"
+	],
     "exclude": [
         "src/**/*.spec.ts"
-    ]
+    ],
+	"compileOnSave": false,
+	"compilerOptions": {
+		"outDir": "./dist",
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"sourceMap": true,
+		"module": "commonjs",
+		"noImplicitAny": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"strictNullChecks": true,
+		"target": "es5",
+		"typeRoots": [
+			"node_modules/@types"
+		],
+		"lib": [
+			"es5"
+		]
+	}
 }
