--- a/package.json
+++ b/package.json
@@ -25,23 +25,23 @@
   "dependencies": {
     "globby": "^10.0.1",
     "istanbul-lib-instrument": "^1.10.1",
-    "typescript": "3.7.5"
+    "typescript": "^3.7.5"
   },
   "peerDependencies": {
     "karma": ">=0.9"
   },
   "devDependencies": {
     "@types/istanbul-lib-instrument": "^1.7.3",
-    "@types/node": "^10.14.21",
-    "prettier": "1.19.1",
-    "prettier-package-json": "2.1.3",
+    "@types/node": "^10.17.16",
+    "prettier": "^1.19.1",
+    "prettier-package-json": "^2.1.3",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "tslint-clean-code": "^0.2.10",
     "tslint-config-airbnb": "^5.11.2",
-    "tslint-config-prettier": "1.18.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "tslint-plugin-prettier": "2.1.0",
+    "tslint-plugin-prettier": "^2.1.0",
     "uglify-js": "^3.6.9"
   },
   "keywords": [
