--- a/package.json
+++ b/package.json
@@ -14,33 +14,66 @@
   "version": "2.1.0",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "npm run lint",
+    "generate-public-api-schema": "make-dir dist && typescript-json-schema src/model.ts PublicAPI --out dist/public_api.schema.json",
+    "generate-public-api-schema:watch": "onchange --initial 'src/model.ts' -- npm run generate-public-api-schema",
+    "prebuild": "npm run generate-public-api-schema",
     "build": "tsc",
-    "build:watch": "npm run build -- --watch",
+    "build:watch": "concurrently --kill-others --prefix '{name}:' --names 'TS,MODEL' --prefix-colors 'magenta,blue' \"npm run build -- --watch\" \"npm run generate-public-api-schema:watch\"",
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "lint-package.json": "prettier-package-json --write",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "pretest": "npm run build",
+    "test": "nyc mocha --exit --require ts-node/register **/*.spec.ts",
+    "test:watch": "onchange --initial 'test/*.spec.ts' 'src/*.ts' -- npm run test",
+    "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage --open=coverage --quiet\""
   },
   "dependencies": {
     "globby": "^11.0.0",
     "istanbul-lib-instrument": "^4.0.1",
-    "typescript": "^3.7.5"
+    "predicates": "^2.0.3",
+    "shortid": "^2.2.15",
+    "typescript": "^3.7.5",
+    "typescript-json-schema": "^0.42.0"
   },
   "peerDependencies": {
     "karma": ">=0.9"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.9",
     "@types/istanbul-lib-instrument": "^1.7.3",
+    "@types/karma": "^4.4.0",
+    "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.4",
+    "@types/rimraf": "^2.0.3",
+    "@types/shortid": "0.0.29",
+    "chai": "^4.2.0",
+    "concurrently": "^5.1.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^4.0.2",
+    "live-server": "^1.2.1",
+    "make-dir-cli": "^2.0.0",
+    "mocha": "^7.0.1",
+    "nyc": "^14.1.1",
+    "onchange": "^6.1.0",
     "prettier": "^1.19.1",
     "prettier-package-json": "^2.1.3",
-    "ts-node": "^8.4.1",
-    "tslint": "^6.0.0",
+    "rimraf": "^2.7.1",
+    "ts-loader": "^5.4.5",
+    "ts-node": "^8.6.2",
+    "tslint": "^5.20.1",
     "tslint-clean-code": "^0.2.10",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "tslint-plugin-prettier": "^2.1.0"
+    "tslint-loader": "^3.6.0",
+    "tslint-plugin-prettier": "^2.1.0",
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2"
   },
   "keywords": [
     "allsources",
