--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "lint-package.json": "prettier-package-json --write",
     "lint:fix": "npm run lint -- --fix",
-    "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage --open=coverage --quiet\"",
+    "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run build",
     "test": "nyc mocha --exit --require ts-node/register **/*.ts",
     "test:watch": "onchange --initial 'test/*.spec.ts' 'src/*.ts' -- npm run test"
