Add lint + test to CI

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,4 +18,6 @@ jobs:
       - name: build
         run: |
           npm install ${{ matrix.install-option }}
+          npm run lint
           npm run build
+          npm run test
