--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run build",
     "test": "nyc mocha --exit --require ts-node/register **/*.ts",
+    "test:ci": "npm run test",
+    "posttest:ci": "codecov",
     "test:watch": "onchange --initial 'test/*.spec.ts' 'src/*.ts' -- npm run test"
   },
   "dependencies": {
@@ -47,6 +49,7 @@
     "@types/rimraf": "^2.0.3",
     "@types/shortid": "0.0.29",
     "chai": "^4.2.0",
+    "codecov": "^3.6.5",
     "concurrently": "^5.1.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^4.4.1",
