--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "globby": "^11.0.0",
     "istanbul-lib-instrument": "^4.0.1",
     "predicates": "^2.0.3",
-    "shortid": "^2.2.15",
-    "typescript": "^3.8.2",
-    "typescript-json-schema": "^0.42.0"
+    "typescript": "^3.8.2"
   },
   "peerDependencies": {
     "karma": ">=0.9"
@@ -67,6 +65,7 @@
     "prettier-package-json": "^2.1.3",
     "puppeteer": "^2.1.1",
     "rimraf": "^3.0.2",
+    "shortid": "^2.2.15",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
@@ -76,6 +75,7 @@
     "tslint-config-standard": "^9.0.0",
     "tslint-loader": "^3.6.0",
     "tslint-plugin-prettier": "^2.1.0",
+    "typescript-json-schema": "^0.42.0",
     "webpack": "^4.41.6"
   },
   "keywords": [
