--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "tslint-loader": "^3.6.0",
+    "tslint-no-circular-imports": "^0.7.0",
     "tslint-plugin-prettier": "^2.1.0",
     "typescript-json-schema": "^0.42.0",
     "webpack": "^4.41.6"
