--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: node_js
-
-node_js: 
-  - 11
-  - 12
-  - 13
-
+node_js:
+- 11
+- 12
+- 13
 script:
-  - npm run lint
-  - npm run build
-  - npm run test:ci
+- npm run lint
+- npm run build
+- npm run test:ci
+deploy:
+  provider: npm
+  email: $NPM_EMAIL
+  api_key:
+    secure: $NPM_API_KEY_SECURE
+  on:
+    tags: true
+    repo: kopach/karma-sabarivka-reporter
+    branch: master
