--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "version": "3.0.2",
   "main": "dist/index.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "prebuild": "rimraf dist && npm run generate-public-api-schema",
     "build": "tsc",
@@ -22,6 +25,7 @@
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "lint-package.json": "prettier-package-json --write",
     "lint:fix": "npm run lint -- --fix",
+    "publish": "np",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run build",
     "test": "nyc mocha --exit --require ts-node/register **/*.ts",
@@ -59,6 +63,7 @@
     "live-server": "^1.2.1",
     "make-dir-cli": "^2.0.0",
     "mocha": "^7.1.0",
+    "np": "^6.2.0",
     "nyc": "^15.0.0",
     "onchange": "^6.1.0",
     "prettier": "^1.19.1",
