Add release script

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "lint-package.json": "prettier-package-json --write",
     "lint:fix": "npm run lint -- --fix",
-    "publish": "np",
+    "prepublishOnly": "build",
+    "release": "np",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run build",
     "test": "nyc mocha --exit --require ts-node/register **/*.ts",
