Make `np` tool to work without 2 factor auth
Solution:
https://github.com/sindresorhus/np/issues/494#issuecomment-599248871

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint-package.json": "prettier-package-json --write",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
-    "release": "np",
+    "release": "np --no-2fa",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run build",
     "test": "nyc mocha --exit --require ts-node/register **/*.ts",
@@ -65,7 +65,7 @@
     "live-server": "^1.2.1",
     "make-dir-cli": "^2.0.0",
     "mocha": "^7.1.0",
-    "np": "^6.2.0",
+    "np": "https://github.com/pixelastic/np/tarball/c3ab2e3b053c7da0ce40a572ca1616273ac080f8",
     "nyc": "^15.0.0",
     "onchange": "^6.1.0",
     "prettier": "^1.19.1",
