--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dist/*"
   ],
   "scripts": {
+    "adr:update": "adr update",
     "prebuild": "rimraf dist && npm run generate-public-api-schema",
     "build": "tsc",
     "build:watch": "concurrently --kill-others --prefix '{name}:' --names 'TS,MODEL' --prefix-colors 'magenta,blue' \"npm run build -- --watch\" \"npm run generate-public-api-schema:watch\"",
@@ -51,6 +52,7 @@
     "@types/node": "^13.9.1",
     "@types/rimraf": "^2.0.3",
     "@types/shortid": "0.0.29",
+    "adr": "^1.1.2",
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
     "concurrently": "^5.1.0",
