Implement In memory file creation for tests

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "release": "np --no-2fa",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run build",
-    "test": "nyc mocha --exit --require ts-node/register **/*.ts",
+    "test": "nyc mocha --exit --require ts-node/register ./test/test.ts",
     "test:ci": "npm run test",
     "posttest:ci": "codecov",
     "test:watch": "onchange --kill --initial 'test/*.spec.ts' 'src/*.ts' -- npm run test",
@@ -59,6 +59,8 @@
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
     "concurrently": "^5.1.0",
+    "fs-extra": "7.0.1",
+    "fs-monkey": "^1.0.1",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
@@ -69,15 +71,18 @@
     "karma-webpack": "^4.0.2",
     "live-server": "^1.2.1",
     "make-dir-cli": "^2.0.0",
+    "memfs": "^3.1.2",
     "mocha": "^7.1.2",
+    "mock-fs": "^4.12.0",
     "np": "https://github.com/pixelastic/np/tarball/c3ab2e3b053c7da0ce40a572ca1616273ac080f8",
     "nyc": "^15.0.0",
     "onchange": "^6.1.0",
     "prettier": "^1.19.1",
-    "prettier-package-json": "^2.1.3",
     "puppeteer": "^2.1.1",
     "rimraf": "^3.0.2",
     "shortid": "^2.2.15",
+    "spyfs": "^1.0.2",
+    "streamroller": "1.0.6",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tslint": "^6.1.0",
@@ -89,6 +94,7 @@
     "tslint-no-circular-imports": "^0.7.0",
     "tslint-plugin-prettier": "^2.2.0",
     "typescript-json-schema": "^0.42.0",
+    "unionfs": "^4.4.0",
     "webpack": "^4.42.0"
   },
   "keywords": [
