Fix & update dependencies

--- a/package.json
+++ b/package.json
@@ -38,58 +38,58 @@
     "prepare": "npm run snyk-protect"
   },
   "dependencies": {
-    "globby": "^11.0.0",
-    "istanbul-lib-instrument": "^4.0.3",
-    "predicates": "^2.0.3",
-    "typescript": "^3.9.2",
-    "snyk": "^1.321.0"
+    "globby": "11.0.0",
+    "istanbul-lib-instrument": "4.0.3",
+    "predicates": "2.0.3",
+    "typescript": "3.9.2",
+    "snyk": "1.321.0"
   },
   "peerDependencies": {
     "karma": ">=0.9"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/istanbul-lib-instrument": "^1.7.3",
-    "@types/karma": "^4.4.0",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.9.1",
-    "@types/rimraf": "^2.0.3",
+    "@types/chai": "4.2.11",
+    "@types/istanbul-lib-instrument": "1.7.3",
+    "@types/karma": "4.4.0",
+    "@types/mocha": "7.0.2",
+    "@types/node": "13.9.1",
+    "@types/rimraf": "2.0.3",
     "@types/shortid": "0.0.29",
-    "adr": "^1.1.2",
-    "chai": "^4.2.0",
-    "codecov": "^3.6.5",
-    "concurrently": "^5.1.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "live-server": "^1.2.1",
-    "make-dir-cli": "^2.0.0",
-    "mocha": "^7.1.2",
+    "adr": "1.1.2",
+    "chai": "4.2.0",
+    "codecov": "3.6.5",
+    "concurrently": "5.1.0",
+    "istanbul-instrumenter-loader": "3.0.1",
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.0.2",
+    "karma-coverage-istanbul-reporter": "2.1.1",
+    "karma-mocha": "1.3.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "4.0.2",
+    "live-server": "1.2.1",
+    "make-dir-cli": "2.0.0",
+    "mocha": "7.1.2",
     "np": "https://github.com/pixelastic/np/tarball/c3ab2e3b053c7da0ce40a572ca1616273ac080f8",
-    "nyc": "^15.0.0",
-    "onchange": "^6.1.0",
-    "prettier": "^1.19.1",
-    "prettier-package-json": "^2.1.3",
-    "puppeteer": "^2.1.1",
-    "rimraf": "^3.0.2",
-    "shortid": "^2.2.15",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.1.0",
-    "tslint-clean-code": "^0.2.10",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^9.0.0",
-    "tslint-loader": "^3.6.0",
-    "tslint-no-circular-imports": "^0.7.0",
-    "tslint-plugin-prettier": "^2.2.0",
-    "typescript-json-schema": "^0.42.0",
-    "webpack": "^4.42.0"
+    "nyc": "15.0.0",
+    "onchange": "6.1.0",
+    "prettier": "1.19.1",
+    "prettier-package-json": "2.1.3",
+    "puppeteer": "2.1.1",
+    "rimraf": "3.0.2",
+    "shortid": "2.2.15",
+    "ts-loader": "6.2.1",
+    "ts-node": "8.6.2",
+    "tslint": "6.1.0",
+    "tslint-clean-code": "0.2.10",
+    "tslint-config-airbnb": "5.11.2",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-config-standard": "9.0.0",
+    "tslint-loader": "3.6.0",
+    "tslint-no-circular-imports": "0.7.0",
+    "tslint-plugin-prettier": "2.2.0",
+    "typescript-json-schema": "0.42.0",
+    "webpack": "4.42.0"
   },
   "keywords": [
     "allsources",
