--- a/package.json
+++ b/package.json
@@ -26,39 +26,39 @@
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "lint-package.json": "prettier-package-json --write",
     "lint:fix": "npm run lint -- --fix",
+    "prepare": "npm run snyk-protect",
     "prepublishOnly": "npm run build",
     "release": "np --no-2fa",
+    "snyk-protect": "snyk protect",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run build",
     "test": "nyc mocha --exit --require ts-node/register **/*.ts",
     "test:ci": "npm run test",
     "posttest:ci": "codecov",
-    "test:watch": "onchange --kill --initial 'test/*.spec.ts' 'src/*.ts' -- npm run test",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "test:watch": "onchange --kill --initial 'test/*.spec.ts' 'src/*.ts' -- npm run test"
   },
   "dependencies": {
     "globby": "11.0.1",
     "istanbul-lib-instrument": "4.0.3",
     "predicates": "2.0.3",
-    "typescript": "3.9.4",
-    "snyk": "1.334.0"
+    "snyk": "1.336.0",
+    "typescript": "3.9.4"
   },
   "peerDependencies": {
     "karma": ">=0.9"
   },
   "devDependencies": {
     "@types/chai": "4.2.11",
-    "@types/istanbul-lib-instrument": "1.7.3",
+    "@types/istanbul-lib-instrument": "1.7.4",
     "@types/karma": "4.4.0",
     "@types/mocha": "7.0.2",
-    "@types/node": "13.9.1",
-    "@types/rimraf": "2.0.3",
+    "@types/node": "14.0.10",
+    "@types/rimraf": "3.0.0",
     "@types/shortid": "0.0.29",
-    "adr": "1.1.2",
+    "adr": "1.1.4",
     "chai": "4.2.0",
-    "codecov": "3.6.5",
-    "concurrently": "5.1.0",
+    "codecov": "3.7.0",
+    "concurrently": "5.2.0",
     "istanbul-instrumenter-loader": "3.0.1",
     "karma": "4.4.1",
     "karma-chrome-launcher": "3.1.0",
@@ -69,27 +69,27 @@
     "karma-webpack": "4.0.2",
     "live-server": "1.2.1",
     "make-dir-cli": "2.0.0",
-    "mocha": "7.1.2",
+    "mocha": "7.2.0",
     "np": "https://github.com/pixelastic/np/tarball/c3ab2e3b053c7da0ce40a572ca1616273ac080f8",
-    "nyc": "15.0.0",
-    "onchange": "6.1.0",
-    "prettier": "1.19.1",
+    "nyc": "15.1.0",
+    "onchange": "7.0.2",
+    "prettier": "2.0.5",
     "prettier-package-json": "2.1.3",
-    "puppeteer": "2.1.1",
+    "puppeteer": "3.3.0",
     "rimraf": "3.0.2",
     "shortid": "2.2.15",
     "ts-loader": "6.2.1",
-    "ts-node": "8.6.2",
-    "tslint": "6.1.0",
+    "ts-node": "8.10.2",
+    "tslint": "6.1.2",
     "tslint-clean-code": "0.2.10",
     "tslint-config-airbnb": "5.11.2",
     "tslint-config-prettier": "1.18.0",
     "tslint-config-standard": "9.0.0",
     "tslint-loader": "3.6.0",
     "tslint-no-circular-imports": "0.7.0",
-    "tslint-plugin-prettier": "2.2.0",
+    "tslint-plugin-prettier": "2.3.0",
     "typescript-json-schema": "0.42.0",
-    "webpack": "4.42.0"
+    "webpack": "4.43.0"
   },
   "keywords": [
     "allsources",
