--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prepare": "npm run snyk-protect",
     "prepublishOnly": "npm run build",
     "release": "np --no-2fa",
+    "postshrinkwrap": "lockfix",
     "snyk-protect": "snyk protect",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run build",
@@ -68,6 +69,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "4.0.2",
     "live-server": "1.2.1",
+    "lockfix": "1.0.0",
     "make-dir-cli": "2.0.0",
     "mocha": "7.2.0",
     "np": "https://github.com/pixelastic/np/tarball/c3ab2e3b053c7da0ce40a572ca1616273ac080f8",
