--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "karma-mocha": "1.3.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "4.0.2",
+    "lcov-total": "1.0.3",
     "live-server": "1.2.1",
     "lockfix": "1.0.0",
     "make-dir-cli": "2.0.0",
