Optimize test time

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "adr:update": "adr update",
-    "prebuild": "rimraf dist && npm run generate-public-api-schema",
+    "prebuild": "npm run prepareDist",
     "build": "tsc --sourceMap false",
     "build:watch": "concurrently --kill-others --prefix '{name}:' --names 'TS,MODEL' --prefix-colors 'magenta,blue' \"npm run build -- --watch\" \"npm run generate-public-api-schema:watch\"",
     "generate-public-api-schema": "make-dir dist && typescript-json-schema src/model.ts PublicAPI --out dist/public_api.schema.json",
@@ -27,12 +27,13 @@
     "lint-package.json": "prettier-package-json --write",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "npm run snyk-protect",
+    "prepareDist": "rimraf dist && npm run generate-public-api-schema",
     "prepublishOnly": "npm run build",
     "release": "np --no-2fa",
     "postshrinkwrap": "lockfix",
     "snyk-protect": "snyk protect",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
-    "pretest": "npm run build",
+    "pretest": "npm run prepareDist",
     "test": "nyc mocha --exit --require ts-node/register **/*.ts",
     "test:ci": "npm run test",
     "posttest:ci": "codecov",
