--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,6 +1,7 @@
 {
   "all": true,
   "check-coverage": true,
+  "include": ["src/**"],
   "extension": [".ts"],
   "reporter": ["text-summary", "lcov"],
   "temp-directory": "coverage/.nyc_output",
