--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "snyk-protect": "snyk protect",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run generate-public-api-schema",
-    "test": "nyc mocha --exit --require ts-node/register **/*.ts",
+    "test": "nyc mocha --config test/.mocharc.json --exit --require ts-node/register **/*.ts",
     "test:ci": "npm run test",
     "posttest:ci": "codecov",
     "test:watch": "onchange --kill --initial 'test/*.spec.ts' 'src/*.ts' -- npm run test"
