ci(release): use semantic release system

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint:fix": "npm run lint -- --fix",
     "prepare": "npm run snyk-protect",
     "prepublishOnly": "npm run build",
-    "release": "np --no-2fa",
+    "release": "standard-version",
     "postshrinkwrap": "lockfix",
     "snyk-protect": "snyk protect",
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
@@ -81,6 +81,7 @@
     "puppeteer": "4.0.1",
     "rimraf": "3.0.2",
     "shortid": "2.2.15",
+    "standard-version": "8.0.0",
     "ts-loader": "7.0.5",
     "ts-node": "8.10.2",
     "tslint": "6.1.2",
