--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,6 @@
 {
   "hooks": {
-    "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
+    "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true && devmoji -e --lint",
     "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
   }
 }
