build(seriesci): 📦️ fix test time stat being wrongly recorded
Code coverage upload time was taken into account as test execution time. Due to network connectivity
delay it could take a lot of time and can influence stat

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_script:
 script:
   - ./scripts/npm_run_time.sh lint
   - ./scripts/npm_run_time.sh build
-  - ./scripts/npm_run_time.sh test:ci
+  - ./scripts/npm_run_time.sh test
+  - npm run upload-code-coverage
 
 after_success:
   - scripts/seriesci.sh
