--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "tdd": "concurrently --kill-others \"npm run test:watch\" \"live-server --watch=coverage/lcov-report --open=coverage/lcov-report --quiet\"",
     "pretest": "npm run generate-public-api-schema",
     "test": "nyc mocha --config test/.mocharc.json **/*.ts",
-    "test:ci": "npm run test",
-    "posttest:ci": "codecov",
+    "upload-code-coverage": "codecov",
     "test:watch": "onchange --kill --initial 'test/*.spec.ts' 'src/*.ts' -- npm run test"
   },
   "config": {
